# running_team_vs

./: .gitignore  README.md  README.txt  build_static.py  fonctions.py  main.py  processed_activities.xlsx  pyproject.toml  requirements.txt  run.py  teams.xlsx  update_activities.py
.github/workflows/: pages.yml
data/: activities_log.xlsx  distances.xlsx  last_refresh.json  processed_activities.xlsx  reset_state.json  teams.xlsx
docs/: index.html
docs/static/: styles.css
src/running_team_vs/: __init__.py  app.py  club_api.py  config.py  ranking.py  storage.py  strava_auth.py
tests/: test_app_refresh.py  test_club_api.py  test_ranking.py  test_static_build.py  test_update_activities.py
web/static/: styles.css
web/templates/: ranking.html
